Simplified home screen and table layout, this fixes alignment issues

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -47,7 +47,6 @@
 	padding-top: 4px;
 	padding-left: 4px;
     font-size: 18px;
-    /*background-color: #F6E3CE;*/
     background-color: #D8D8D8;
     color: black;
     opacity: 0.6;
@@ -155,6 +154,13 @@
 }
 
 .noticeItem {
+background-color: #D8D8D8;
     color: black;
+    margin: 0px;
+    padding: 10px;
 }
 
+
+td {
+  vertical-align: baseline;
+}
