--- a/app/assets/stylesheets/stock.scss
+++ b/app/assets/stylesheets/stock.scss
@@ -4,6 +4,7 @@
 
 .stock{
 	font-size: 20px;
+	text-align: center;
 }
 
 .stockred{
